<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufsm.projetosoftware.appdoacao.MainActivity">

    <Button
        android:id="@+id/btNewDonation"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Cadastrar Doação"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btSearchDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Procurar Doação"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btNewDonation" />

    <Button
        android:id="@+id/btListDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minhas Doações"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btSearchDonation" />

    <Button
        android:id="@+id/btListRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btListDonation"
        android:text="Minhas Solicitações"/>

    <Button
        android:id="@+id/btSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:text="Sair"/>
</android.support.constraint.ConstraintLayout>
