<resources>
    <string name="app_name">AppDoacao</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar ou registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo necessário</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="create_account">Criar Conta</string>
    <string name="adress">Endereço</string>
    <string name="cep">CEP</string>
    <string name="city">Cidade</string>
    <string name="complement">Complemento</string>
    <string name="district">Bairro</string>
    <string name="number">Número</string>
    <string name="state">Estado</string>
    <string name="no_account_yet_create_one">Ainda não tem uma conta? Cadastre-se</string>
</resources>
