<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Titulo"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Descrição"/>

    <Button
        android:id="@+id/btSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecionar foto" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="invisible"
        app:srcCompat="@android:color/transparent" />

    <Button
        android:id="@+id/btRegisterDonation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastrar doação"/>

</LinearLayout>
